idf_component_register(SRCS "twai_test_main.c" "encoder_service.cpp" "controls.cpp"
                       "twai_service.cpp" "main.cpp"
                       "events.cpp" "led.cpp"
                       "imu_service.cpp"
                       "RadioLibCustomHAL.hpp"
                       INCLUDE_DIRS "includes")
